seaqt/QtGui/gen_qtextformat.nim

proc fcQTextTableFormat_setColumnWidthConstraints(self: pointer, constraints: struct_miqt_array): void {.importc: "QTextTableFormat_setColumnWidthConstraints".}
proc fcQTextTableFormat_columnWidthConstraints(self: pointer): struct_miqt_array {.importc: "QTextTableFormat_columnWidthConstraints".}
proc fcQTextTableFormat_clearColumnWidthConstraints(self: pointer): void {.importc: "QTextTableFormat_clearColumnWidthConstraints".}
proc fcQTextTableFormat_cellSpacing(self: pointer): float64 {.importc: "QTextTableFormat_cellSpacing".}
proc fcQTextTableFormat_setCellSpacing(self: pointer, spacing: float64): void {.importc: "QTextTableFormat_setCellSpacing".}
proc fcQTextTableFormat_cellPadding(self: pointer): float64 {.importc: "QTextTableFormat_cellPadding".}
proc fcQTextTableFormat_setCellPadding(self: pointer, padding: float64): void {.importc: "QTextTableFormat_setCellPadding".}
proc fcQTextTableFormat_setAlignment(self: pointer, alignment: cint): void {.importc: "QTextTableFormat_setAlignment".}
proc fcQTextTableFormat_alignment(self: pointer): cint {.importc: "QTextTableFormat_alignment".}
proc fcQTextTableFormat_setHeaderRowCount(self: pointer, count: cint): void {.importc: "QTextTableFormat_setHeaderRowCount".}
proc fcQTextTableFormat_headerRowCount(self: pointer): cint {.importc: "QTextTableFormat_headerRowCount".}
proc fcQTextTableFormat_setBorderCollapse(self: pointer, borderCollapse: bool): void {.importc: "QTextTableFormat_setBorderCollapse".}
proc fcQTextTableFormat_borderCollapse(self: pointer): bool {.importc: "QTextTableFormat_borderCollapse".}
proc fcQTextTableFormat_new(): ptr cQTextTableFormat {.importc: "QTextTableFormat_new".}
proc fcQTextTableCellFormat_isValid(self: pointer): bool {.importc: "QTextTableCellFormat_isValid".}
proc fcQTextTableCellFormat_setTopPadding(self: pointer, padding: float64): void {.importc: "QTextTableCellFormat_setTopPadding".}
proc fcQTextTableCellFormat_topPadding(self: pointer): float64 {.importc: "QTextTableCellFormat_topPadding".}
proc fcQTextTableCellFormat_setBottomPadding(self: pointer, padding: float64): void {.importc: "QTextTableCellFormat_setBottomPadding".}
proc fcQTextTableCellFormat_bottomPadding(self: pointer): float64 {.importc: "QTextTableCellFormat_bottomPadding".}
proc fcQTextTableCellFormat_setLeftPadding(self: pointer, padding: float64): void {.importc: "QTextTableCellFormat_setLeftPadding".}
proc fcQTextTableCellFormat_leftPadding(self: pointer): float64 {.importc: "QTextTableCellFormat_leftPadding".}
proc fcQTextTableCellFormat_setRightPadding(self: pointer, padding: float64): void {.importc: "QTextTableCellFormat_setRightPadding".}
proc fcQTextTableCellFormat_rightPadding(self: pointer): float64 {.importc: "QTextTableCellFormat_rightPadding".}
proc fcQTextTableCellFormat_setPadding(self: pointer, padding: float64): void {.importc: "QTextTableCellFormat_setPadding".}
proc fcQTextTableCellFormat_setTopBorder(self: pointer, width: float64): void {.importc: "QTextTableCellFormat_setTopBorder".}
proc fcQTextTableCellFormat_topBorder(self: pointer): float64 {.importc: "QTextTableCellFormat_topBorder".}
proc fcQTextTableCellFormat_setBottomBorder(self: pointer, width: float64): void {.importc: "QTextTableCellFormat_setBottomBorder".}
proc fcQTextTableCellFormat_bottomBorder(self: pointer): float64 {.importc: "QTextTableCellFormat_bottomBorder".}
proc fcQTextTableCellFormat_setLeftBorder(self: pointer, width: float64): void {.importc: "QTextTableCellFormat_setLeftBorder".}
proc fcQTextTableCellFormat_leftBorder(self: pointer): float64 {.importc: "QTextTableCellFormat_leftBorder".}
proc fcQTextTableCellFormat_setRightBorder(self: pointer, width: float64): void {.importc: "QTextTableCellFormat_setRightBorder".}
proc fcQTextTableCellFormat_rightBorder(self: pointer): float64 {.importc: "QTextTableCellFormat_rightBorder".}
proc fcQTextTableCellFormat_setBorder(self: pointer, width: float64): void {.importc: "QTextTableCellFormat_setBorder".}
proc fcQTextTableCellFormat_setTopBorderStyle(self: pointer, style: cint): void {.importc: "QTextTableCellFormat_setTopBorderStyle".}
proc fcQTextTableCellFormat_topBorderStyle(self: pointer): cint {.importc: "QTextTableCellFormat_topBorderStyle".}
proc fcQTextTableCellFormat_setBottomBorderStyle(self: pointer, style: cint): void {.importc: "QTextTableCellFormat_setBottomBorderStyle".}
proc fcQTextTableCellFormat_bottomBorderStyle(self: pointer): cint {.importc: "QTextTableCellFormat_bottomBorderStyle".}
proc fcQTextTableCellFormat_setLeftBorderStyle(self: pointer, style: cint): void {.importc: "QTextTableCellFormat_setLeftBorderStyle".}
proc fcQTextTableCellFormat_leftBorderStyle(self: pointer): cint {.importc: "QTextTableCellFormat_leftBorderStyle".}
proc fcQTextTableCellFormat_setRightBorderStyle(self: pointer, style: cint): void {.importc: "QTextTableCellFormat_setRightBorderStyle".}
proc fcQTextTableCellFormat_rightBorderStyle(self: pointer): cint {.importc: "QTextTableCellFormat_rightBorderStyle".}
proc fcQTextTableCellFormat_setBorderStyle(self: pointer, style: cint): void {.importc: "QTextTableCellFormat_setBorderStyle".}
proc fcQTextTableCellFormat_setTopBorderBrush(self: pointer, brush: pointer): void {.importc: "QTextTableCellFormat_setTopBorderBrush".}
proc fcQTextTableCellFormat_topBorderBrush(self: pointer): pointer {.importc: "QTextTableCellFormat_topBorderBrush".}
proc fcQTextTableCellFormat_setBottomBorderBrush(self: pointer, brush: pointer): void {.importc: "QTextTableCellFormat_setBottomBorderBrush".}
proc fcQTextTableCellFormat_bottomBorderBrush(self: pointer): pointer {.importc: "QTextTableCellFormat_bottomBorderBrush".}
proc fcQTextTableCellFormat_setLeftBorderBrush(self: pointer, brush: pointer): void {.importc: "QTextTableCellFormat_setLeftBorderBrush".}
proc fcQTextTableCellFormat_leftBorderBrush(self: pointer): pointer {.importc: "QTextTableCellFormat_leftBorderBrush".}
proc fcQTextTableCellFormat_setRightBorderBrush(self: pointer, brush: pointer): void {.importc: "QTextTableCellFormat_setRightBorderBrush".}
proc fcQTextTableCellFormat_rightBorderBrush(self: pointer): pointer {.importc: "QTextTableCellFormat_rightBorderBrush".}
proc fcQTextTableCellFormat_setBorderBrush(self: pointer, brush: pointer): void {.importc: "QTextTableCellFormat_setBorderBrush".}
proc fcQTextTableCellFormat_new(): ptr cQTextTableCellFormat {.importc: "QTextTableCellFormat_new".}

proc typeX*(self: gen_qtextformat_types.QTextLength): cint =
  cint(fcQTextLength_typeX(self.h))

proc value*(self: gen_qtextformat_types.QTextLength, maximumLength: float64): float64 =
  fcQTextLength_value(self.h, maximumLength)

proc rawValue*(self: gen_qtextformat_types.QTextLength): float64 =
  fcQTextLength_rawValue(self.h)

proc operatorEqual*(self: gen_qtextformat_types.QTextLength, other: gen_qtextformat_types.QTextLength): bool =
  fcQTextLength_operatorEqual(self.h, other.h)

proc operatorNotEqual*(self: gen_qtextformat_types.QTextLength, other: gen_qtextformat_types.QTextLength): bool =
  fcQTextLength_operatorNotEqual(self.h, other.h)

proc ToQVariant*(self: gen_qtextformat_types.QTextLength): gen_qvariant_types.QVariant =
  gen_qvariant_types.QVariant(h: fcQTextLength_ToQVariant(self.h), owned: true)

proc create*(T: type gen_qtextformat_types.QTextLength): gen_qtextformat_types.QTextLength =
  gen_qtextformat_types.QTextLength(h: fcQTextLength_new(), owned: true)

proc create*(T: type gen_qtextformat_types.QTextLength,
    typeVal: cint, value: float64): gen_qtextformat_types.QTextLength =
  gen_qtextformat_types.QTextLength(h: fcQTextLength_new2(cint(typeVal), value), owned: true)

proc create*(T: type gen_qtextformat_types.QTextLength,
    param1: gen_qtextformat_types.QTextLength): gen_qtextformat_types.QTextLength =
  gen_qtextformat_types.QTextLength(h: fcQTextLength_new3(param1.h), owned: true)

proc operatorAssign*(self: gen_qtextformat_types.QTextFormat, rhs: gen_qtextformat_types.QTextFormat): void =
  fcQTextFormat_operatorAssign(self.h, rhs.h)

proc swap*(self: gen_qtextformat_types.QTextFormat, other: gen_qtextformat_types.QTextFormat): void =
  fcQTextFormat_swap(self.h, other.h)

proc merge*(self: gen_qtextformat_types.QTextFormat, other: gen_qtextformat_types.QTextFormat): void =
  fcQTextFormat_merge(self.h, other.h)

proc isValid*(self: gen_qtextformat_types.QTextFormat): bool =
  fcQTextFormat_isValid(self.h)

proc isEmpty*(self: gen_qtextformat_types.QTextFormat): bool =
  fcQTextFormat_isEmpty(self.h)

proc typeX*(self: gen_qtextformat_types.QTextFormat): cint =
  fcQTextFormat_typeX(self.h)

proc objectIndex*(self: gen_qtextformat_types.QTextFormat): cint =
  fcQTextFormat_objectIndex(self.h)

proc setObjectIndex*(self: gen_qtextformat_types.QTextFormat, objectVal: cint): void =
  fcQTextFormat_setObjectIndex(self.h, objectVal)

proc property*(self: gen_qtextformat_types.QTextFormat, propertyId: cint): gen_qvariant_types.QVariant =
  gen_qvariant_types.QVariant(h: fcQTextFormat_property(self.h, propertyId), owned: true)

proc setProperty*(self: gen_qtextformat_types.QTextFormat, propertyId: cint, value: gen_qvariant_types.QVariant): void =
  fcQTextFormat_setProperty(self.h, propertyId, value.h)

proc clearProperty*(self: gen_qtextformat_types.QTextFormat, propertyId: cint): void =
  fcQTextFormat_clearProperty(self.h, propertyId)

proc hasProperty*(self: gen_qtextformat_types.QTextFormat, propertyId: cint): bool =
  fcQTextFormat_hasProperty(self.h, propertyId)

proc boolProperty*(self: gen_qtextformat_types.QTextFormat, propertyId: cint): bool =
  fcQTextFormat_boolProperty(self.h, propertyId)

proc intProperty*(self: gen_qtextformat_types.QTextFormat, propertyId: cint): cint =
  fcQTextFormat_intProperty(self.h, propertyId)

proc doubleProperty*(self: gen_qtextformat_types.QTextFormat, propertyId: cint): float64 =
  fcQTextFormat_doubleProperty(self.h, propertyId)

proc stringProperty*(self: gen_qtextformat_types.QTextFormat, propertyId: cint): string =
  let v_ms = fcQTextFormat_stringProperty(self.h, propertyId)
  let vx_ret = string.fromBytes(toOpenArrayByte(v_ms.data, 0, int(v_ms.len)-1))
  c_free(v_ms.data)
  vx_ret

proc colorProperty*(self: gen_qtextformat_types.QTextFormat, propertyId: cint): gen_qcolor_types.QColor =
  gen_qcolor_types.QColor(h: fcQTextFormat_colorProperty(self.h, propertyId), owned: true)

proc penProperty*(self: gen_qtextformat_types.QTextFormat, propertyId: cint): gen_qpen_types.QPen =
  gen_qpen_types.QPen(h: fcQTextFormat_penProperty(self.h, propertyId), owned: true)

proc brushProperty*(self: gen_qtextformat_types.QTextFormat, propertyId: cint): gen_qbrush_types.QBrush =
  gen_qbrush_types.QBrush(h: fcQTextFormat_brushProperty(self.h, propertyId), owned: true)

proc lengthProperty*(self: gen_qtextformat_types.QTextFormat, propertyId: cint): gen_qtextformat_types.QTextLength =
  gen_qtextformat_types.QTextLength(h: fcQTextFormat_lengthProperty(self.h, propertyId), owned: true)

proc lengthVectorProperty*(self: gen_qtextformat_types.QTextFormat, propertyId: cint): seq[gen_qtextformat_types.QTextLength] =
  var v_ma = fcQTextFormat_lengthVectorProperty(self.h, propertyId)
  var vx_ret = newSeq[gen_qtextformat_types.QTextLength](int(v_ma.len))
  let v_outCast = cast[ptr UncheckedArray[pointer]](v_ma.data)
  for i in 0 ..< v_ma.len:
    vx_ret[i] = gen_qtextformat_types.QTextLength(h: v_outCast[i], owned: true)
  c_free(v_ma.data)
  vx_ret

proc setProperty*(self: gen_qtextformat_types.QTextFormat, propertyId: cint, lengths: seq[gen_qtextformat_types.QTextLength]): void =
  var lengths_CArray = newSeq[pointer](len(lengths))
  for i in 0..<len(lengths):
    lengths_CArray[i] = lengths[i].h

  fcQTextFormat_setProperty2(self.h, propertyId, struct_miqt_array(len: csize_t(len(lengths)), data: if len(lengths) == 0: nil else: addr(lengths_CArray[0])))
